<resources>
    <string name="app_name">DiveIn</string>
    <string name="dive_in">DiveIn</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registration_page">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="licence_id">Licence ID</string>
    <string name="title_activity_main">DiveIn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_profile">User Profile</string>
    <string name="wish_list">Wish List</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="contact">Contact Us</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dive_association">Dive Association</string>
    <string name="licence_type">Licence Type</string>
    <string name="save">Save</string>
    <string name="personal_details">Personal Details</string>
    <string name="licence_details">Licence Details</string>
    <string name="new_input">New Input</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="title_activity_map">Map</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="search_place">Search Place</string>
    <string name="title">Title</string>
    <string name="rate">Rate</string>
    <string name="comment_here">Comment Here...</string>
    <string name="description">Description</string>
    <string name="add_new_dive">Add New Dive</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="address"><u>Address</u></string>
    <string name="phone_number"><u>Phone Number</u></string>
    <string name="website">WebSite</string>
    <string name="dive_sites">Dive Sites</string>
    <string name="dive_clubs">Dive Clubs</string>
    <string name="select_wich_locations_to_show">Select wich locations to show</string>
    <string name="log_new_dive">Log New Dive</string>
    <string name="add_your_description">Add your description...</string>
    <string name="bottom_type">Bottom Type</string>
    <string name="salinity_type">Salinity Type</string>
    <string name="water_type">Water Type</string>
    <string name="maximum_dive_depth">Maximum Dive Depth</string>
    <string name="my_dives">My Dives</string>
    <string name="summary">Summary</string>
    <string name="max_depth">Max Depth</string>
    <string name="summary_cell">Summary:</string>
    <string name="bottom_type_cell">Bottom Type:</string>
    <string name="salinity_type_cell">Salinity Type:</string>
    <string name="water_type_cell">Water Type:</string>
    <string name="max_depth_cell">Max Depth:</string>
</resources>
