<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_person_gray_24dp"
            android:title="@string/user_profile" />
        <item
            android:id="@+id/drawer_wish_list"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/wish_list" />
        <item
            android:id="@+id/drawer_my_dives"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/my_dives" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/drawer_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/drawer_contact"
                android:icon="@drawable/ic_local_phone_black_24dp"
                android:title="@string/contact" />
            <item
                android:id="@+id/drawer_log_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
