<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogNewDiveActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/log_dive_toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme"
        app:titleTextColor="#fff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous_regular"
            android:text="@string/log_new_dive"
            android:textColor="#fff"
            android:textSize="18sp" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/log_dive_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/righteous_regular"
        android:text="@string/title"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/log_dive_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:padding="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="133dp"
        android:hint="@string/add_your_description"
        android:inputType="text|textMultiLine" />

    <EditText
        android:id="@+id/log_dive_depth_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="226dp"
        android:inputType="number"
        android:hint="@string/maximum_dive_depth" />

    <Spinner
        android:id="@+id/bottom_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:prompt="@string/bottom_type"
        android:layout_gravity="center"
        android:layout_marginBottom="194dp" />

    <Spinner
        android:id="@+id/salinity_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:prompt="@string/salinity_type"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="152dp" />

    <Spinner
        android:id="@+id/water_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="111dp"
        android:prompt="@string/water_type" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/save"
        android:onClick="saveDiveBtnClickListener"/>

</RelativeLayout>