<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_wallpaper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/righteous_regular"
        android:text="@string/registration_page"
        android:layout_marginTop="20dp"
        android:textColor="#252121"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/reg_user_name_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/reg_edit_text_bg"
            android:fontFamily="@font/quicksand_regular"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_password_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/reg_edit_text_bg"
            android:fontFamily="@font/quicksand_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_conf_pass_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/reg_edit_text_bg"
            android:fontFamily="@font/quicksand_regular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_email_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/reg_edit_text_bg"
            android:fontFamily="@font/quicksand_regular"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColorHint="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_first_name_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/reg_edit_text_bg"
            android:fontFamily="@font/quicksand_regular"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColorHint="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_last_name_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/reg_edit_text_bg"
            android:fontFamily="@font/quicksand_regular"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColorHint="#000"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/quicksand_regular"
            android:onClick="RegisterNewUserBtnCLickListener"
            android:text="@string/register"
            android:textSize="20sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:visibility="invisible"/>

</RelativeLayout>
