<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/loc_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25sp"
            android:fontFamily="@font/righteous_regular"
            android:textColor="#000"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/loc_dialog_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_below="@id/loc_dialog_title"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/loc_dialog_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rate"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_below="@id/loc_dialog_description"
            android:layout_marginStart="30dp"/>

        <RatingBar
            android:id="@+id/loc_dialog_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="60dp"
            android:numStars="5"
            android:scaleX=".5"
            android:scaleY=".5"
            android:stepSize=".5" />

        <Button
            android:id="@+id/loc_dialog_add_dive_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/loc_dialog_rate"
            android:text="@string/add_new_dive"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:text="Add To Wishlist" />

    </RelativeLayout>

</ScrollView>