<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        tools:context=".MapsActivity"
        android:layout_alignParentBottom="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="56dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#000"
            android:textSize="20sp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/select_wich_locations_to_show"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/dive_site_checkbox"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/dive_sites" />

            <CheckBox
                android:id="@+id/dive_club_checkbox"
                android:layout_width="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/dive_clubs" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/map"
        android:background="#000"
        android:importantForAccessibility="no"/>

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="60dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawablePadding="10dp"
        android:hint="@string/search_place"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/map"
        android:background="@drawable/search_bg"
        android:padding="10dp"
        android:imeOptions="actionSearch"
        android:drawableStart="@drawable/ic_search_black_24dp" />

</RelativeLayout>